--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "prettus/l5-repository": "^2.6",
         "bestmomo/scafold": "^1.0",
         "laravelcollective/html": "^5.2",
-        "gloudemans/shoppingcart": "^2.2"
+        "gloudemans/shoppingcart": "^2.2",
+        "barryvdh/laravel-dompdf": "^0.7.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
